# TVPush

./: .gitignore  README.md  settings.gradle
adb/: build.gradle
adb/src/main/: AndroidManifest.xml
adb/src/main/res/values/: strings.xml
ai/: build.gradle
ai/src/main/: AndroidManifest.xml
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: json.c  json.h  meme.c  native-lib.cpp  plib.c  yihome-lib.cpp
app/src/main/res/values/: strings.xml  styles.xml
awx/: CMakeLists.txt  build.gradle
awx/src/androidTest/java/de/xavaro/android/awx/: ExampleInstrumentedTest.java
awx/src/main/: AndroidManifest.xml
awx/src/main/cpp/: libawxaes.cpp
awx/src/main/java/com/telink/crypto/: AES.java
awx/src/main/java/de/xavaro/android/awx/base/: AWX.java
awx/src/main/java/de/xavaro/android/awx/comm/: AWXAES.java  AWXByteUtils.java  AWXDefs.java  AWXDevice.java  AWXDevices.java  AWXDiscover.java  AWXHardwareUtils.java  AWXProtocol.java  AWXRequest.java
awx/src/main/java/de/xavaro/android/awx/publics/: SmartBulbHandler.java
awx/src/main/java/de/xavaro/android/awx/simple/: Json.java  Log.java  Simple.java
awx/src/main/java/de/xavaro/android/awx/utils/: AWXByteUtils.java  AWXHardwareUtils.java  AWXMathUtils.java
awx/src/main/res/values/: strings.xml
awx/src/test/java/de/xavaro/android/awx/: ExampleUnitTest.java
bcn/src/main/: AndroidManifest.xml
bcn/src/main/res/values/: strings.xml
brl/src/main/: AndroidManifest.xml
brl/src/main/res/values/: strings.xml
cam/: build.gradle
cam/src/main/: AndroidManifest.xml
cam/src/main/res/values/: strings.xml
common/: build.gradle
common/src/main/: AndroidManifest.xml
edx/: build.gradle
edx/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
gui/: build.gradle
gui/src/main/: AndroidManifest.xml
iam/: build.gradle
iam/src/main/: AndroidManifest.xml
iot/: build.gradle
iot/src/main/: AndroidManifest.xml
pub/: build.gradle
pub/src/main/: AndroidManifest.xml
sny/: build.gradle
sny/src/main/: AndroidManifest.xml
spr/: build.gradle
spr/src/main/: AndroidManifest.xml
tpl/src/main/: AndroidManifest.xml
zztop/: build.gradle
zztop/src/main/: AndroidManifest.xml
zztop/src/main/cpp/: json.c  meme.c  native-lib.cpp
(+810 files in other folders)
